<?xml version="1.0"?>
<package>
  <name>optoforce</name>
  <version>0.0.1</version>
  <description>optoforce contains a driver for the Optoforce sensor</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <url type="website">http://www.shadowrobot.com</url>
  <url type="repository">https://github.com/shadow-robot/optoforce</url>
  <url type="bugtracker">https://github.com/shadow-robot/optoforce/issues</url>

  <author>Toni Oliver</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>python-serial</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>rospy</run_depend>

</package>
